# eumetsat2ani

./: .gitignore  README.md  pyproject.toml
eumetsat2ani/: __init__.py  __main__.py  fetch.py  render.py  utils.py
