
[project]
name = "eumetsat2ani"
version = "0.1.0"
description = "Create animations directly from EUMETSAT data"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "eumdac>=2.0.1",
    "setuptools>=68.0.0",
    "loguru>=0.7.0",
    "satpy>=0.43.0",
    "isodate>=0.6.1",
    "imageio>=2.31.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=3.3.3",
]
